# ampi

./: .gitignore  ALGORITHM.md  BENCHMARKS.md  CPP_PIPELINE_PLAN.md  CREDITS.md  DATABASE_PLAN.md  MNIST_test_KeOps_FAISS_AMPI.ipynb  README.md  TODO.md  ampi.ipynb  ampi_cpp.ipynb  ampi_index.cpp  ampi_jax_old.ipynb  benchmark.py  demo.ipynb  pyproject.toml  setup.py
.github/workflows/: ci.yml  cpp-verify.yml
ampi/: README.md  __init__.py  _ext.cpp  _gemm.hpp  _kernels.py  affine_fan.py  binary.py  checkpoint.py  fan.py  hashing.py  pyproject.toml  setup.py  streaming.py  subspace.py  tomography.py  tuner.py  wal.py
ampi/src/ampi/: __init__.py
benchmarks/: _bench_common.py  _bench_sgemm.py  benchmark.py  benchmark_gist_large.py  benchmark_insert_scaling.py  benchmark_sketch_rerank.py  benchmark_vs_faiss.py  benchmark_vs_hnsw.py  download_data.py  profile_drift_threshold.py
benchmarks/results/: gist_large.jsonl
tests/: smoke_test.py  stress_test.py  test_persistence.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase6.py
verify/scripts/: llm_verify.py
