[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ampi"
version = "0.3.0"
description = "Adaptive Multi-Projection Index — approximate nearest-neighbour search via sorted projections, p-stable LSH, and subspace hashing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sasha Kolpakov"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "numba>=0.55.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ampi*"]
