[build-system]
requires = ["setuptools>=61", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "ampi"
version = "0.6.0"
description = "Adaptive Multi-Projection Index — approximate nearest-neighbour search via sorted projections and affine fans"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sasha Kolpakov"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0,<3",
    "numba>=0.57.0,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ampi*"]
