[build-system]
requires = ["setuptools>=45", "wheel", "numpy", "numba"]
build-backend = "setuptools.build_meta"

[project]
name = "ampi"
version = "0.1.0"
description = "Adaptive Multi-Projection Index for Approximate Nearest Neighbor Search"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sasha Kolpakov"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ampi"
